<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            style="@style/title"
            android:text="@string/title_share"/>
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

    <com.example.frank.ui.ListButton
            android:id="@+id/first_class"
            style="@style/list_item"
            android:text="@string/sel_first"
            />

    <com.example.frank.ui.ListButton
            android:id="@+id/second_class"
            style="@style/list_item"
            android:text="@string/sel_second"/>


    <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:hint="@string/edit_text"
            android:gravity="top"/>

    <EditText
            android:id="@+id/answer1"
            style="@style/edit_right"
            android:maxLength="12"/>

    <EditText
            android:id="@+id/answer2"
            style="@style/edit_error"
            android:maxLength="12"/>

    <EditText
            android:id="@+id/answer3"
            style="@style/edit_error"
            android:maxLength="12"/>

    <EditText
            android:id="@+id/answer4"
            style="@style/edit_error"
            android:maxLength="12"/>

    <com.example.frank.ui.ListButton
            android:id="@+id/post"
            style="@style/list_item"
            android:text="@string/edit_confirm"/>
        </LinearLayout>
</LinearLayout>

